--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Site Title</title>
 </head>
-<a href="https://flatironschool.com">Flatiron School</a>
+
 <body>
-  <h1>Hello, World!</h1>  
+<ul>
+  <li>2 slices of bread</li>
+  <li>4 slices of cheese</li>
+ <ul>
+   <li> cheddar</li>
+   <li>mozzarella</li>
+   <li>pepper jack</li>
+  </ul>
+    <li>1 tbsp of butter</li>
+
+</ul><ol>
+  <li>Spread butter on bread and frying pan</li>
+  <li>Place bread in frying pan and fry</li>
+  <li>Add cheese on top of bread</li>
+  <li>Cover with second slice of bread</li>
+  <li>Turn over and fry for 2 minutes</li>
+</ol>
+
+
+
 </body>
 </html>
