--- a/index.html
+++ b/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Site Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+<table>
+  <tr>
+    <th>CITY</th>
+    <th>STATE(5)</th>
+    <th>2017 ESTIMATE</th>
+  </tr>
+  <tr>
+    <td>NEW YORK(6)</td>
+    <td>NEW YORK</td>
+    <td>8622698</td>
+  </tr>
+  <tr>
+    <td>LOA ANGELES</td>
+    <td>CALIFORNIA</td>
+    <td>3999759</td>
+  </tr>
+  <tr>
+    <td>CHICAGO</td>
+    <td>ILLINOIS</td>
+    <td>2716450</td>
+  </tr>
+  <tr>
+    <td>HOUSTON(7)</td>
+    <td>TEXAS</td>
+    <td>2312717</td>
+</table>
+
+
+
+
+
+
+
 
 <body>
-<ul>
-  <li>2 slices of bread</li>
-  <li>4 slices of cheese</li>
- <ul>
-   <li> cheddar</li>
-   <li>mozzarella</li>
-   <li>pepper jack</li>
-  </ul>
-    <li>1 tbsp of butter</li>
-
-</ul><ol>
-  <li>Spread butter on bread and frying pan</li>
-  <li>Place bread in frying pan and fry</li>
-  <li>Add cheese on top of bread</li>
-  <li>Cover with second slice of bread</li>
-  <li>Turn over and fry for 2 minutes</li>
-</ol>
-
-
-
+  
 </body>
 </html>
