Adds myfiles.md

--- a/index.html
+++ b/index.html
@@ -3,40 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>"We're here to help you!"</title>
 </head>
-<table>
-  <tr>
-    <th>CITY</th>
-    <th>STATE(5)</th>
-    <th>2017 ESTIMATE</th>
-  </tr>
-  <tr>
-    <td>NEW YORK(6)</td>
-    <td>NEW YORK</td>
-    <td>8622698</td>
-  </tr>
-  <tr>
-    <td>LOA ANGELES</td>
-    <td>CALIFORNIA</td>
-    <td>3999759</td>
-  </tr>
-  <tr>
-    <td>CHICAGO</td>
-    <td>ILLINOIS</td>
-    <td>2716450</td>
-  </tr>
-  <tr>
-    <td>HOUSTON(7)</td>
-    <td>TEXAS</td>
-    <td>2312717</td>
-</table>
-
-
-
-
-
-
+<img src="//upload.wikimedia.org/wikipedia/en/thumb/7/72/Bleachanime.png/220px-Bleachanime.png" decoding="async" width="220" height="308" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/en/7/72/Bleachanime.png 1.5x" data-file-width="266" data-file-height="373"> 
 
 
 <body>
