Adds myfiles.md

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>MUSIC
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>"We're here to help you!"</title>
+  <title>Opium Org</title>
 </head>
-<img src="//upload.wikimedia.org/wikipedia/en/thumb/7/72/Bleachanime.png/220px-Bleachanime.png" decoding="async" width="220" height="308" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/en/7/72/Bleachanime.png 1.5x" data-file-width="266" data-file-height="373"> 
+<h1>Playboi Carti</h1>
+<h2>Ken Carson</h2>
+<h3>Destroy Lonely</h3>
+<h4>Homixide gang</h4>
 
 
 <body>
